# UniTraj

./: .gitignore  Makefile  build.py  pyproject.toml  requirements.txt  run.py
unitraj/: __init__.py  train.py  viz.py
unitraj/cache/nuscenes/data_samples/: 0.h5  1.h5  10.h5  11.h5  12.h5  13.h5  14.h5  15.h5  2.h5  3.h5  4.h5  5.h5  6.h5  7.h5  8.h5  9.h5  file_list.pkl
unitraj/configs/: config.yaml  experiment_config.py  path_config.py  wandb_config.py
unitraj/datasets/: __init__.py  base_dataparser.py  base_dataset copy.py  base_dataset.py  common_utils.py  dataparser.py  types.py
unitraj/lightning/: lit_datamodule.py  lit_module.py  lit_trainer_factory.py
unitraj/models/: __init__.py
unitraj/models/autobot/: autobot.py
unitraj/models/base_model/: base_model.py
unitraj/models/mtr/: MTR.py
unitraj/models/mtr/ops/attention/: attention_utils_v2.py
unitraj/utils/: base_config.py  console.py  utils.py  visualization.py
